@@ -26,6 +26,7 @@ no_index:
     - xt
 requires:
   Class::Utils: 0
+  English: 0
   Error::Pure: 0
   License::SPDX: 0
   List::Util: 0
