@@ -1,7 +1,8 @@
 TODO
 ====
-1. Check if license string in format 2 is valid.
 2.
 
 Applied
 =======
+1. Check if license string in format 2 is valid.
+OK [20230130] skim
