@@ -1,4 +1,5 @@
 0.02
+ - Add check for SPDX license id.
  - Fix license SPDX string in test.
  - Regen example.
 
